<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".module3.ui.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:src="@drawable/rkdf" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#304896"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/College_name"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:src="@drawable/rkdf" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:justificationMode="inter_word"
                android:text="@string/about_rkdf"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="4dp"
                android:background="@color/red" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:elevation="@dimen/cardview_compat_inset_shadow"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardMaxElevation="10dp"
                    app:cardPreventCornerOverlap="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:gravity="center"
                                android:text="Follow us on"
                                android:textColor="@color/red"
                                android:textSize="20sp" />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="#E91E63" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="15dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/whatsapp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="20dp"
                                    android:text="@string/wtp"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp" />

                            </LinearLayout>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="#E91E63" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="15dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/fb" />

                                <TextView
                                    android:id="@+id/txtNum1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="20dp"
                                    android:text="@string/fb"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp" />

                            </LinearLayout>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="#E91E63" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_margin="15dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/insta" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="20dp"
                                    android:text="@string/ig"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp" />

                            </LinearLayout>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="#E91E63" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:layout_gravity="center_horizontal"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/x" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="20dp"
                                    android:text="@string/x"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp" />

                            </LinearLayout>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:background="#E91E63" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="15dp"
                                android:layout_gravity="center_horizontal"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/yt" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_marginStart="20dp"
                                    android:text="@string/yt"
                                    android:textColor="@color/light_blue"
                                    android:textSize="18sp" />

                            </LinearLayout>


                            <View
                                android:layout_width="match_parent"
                                android:layout_height="2dp"
                                android:layout_marginTop="10dp"
                                android:background="#E91E63" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>